--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.12.0",
     "sequelize": "^6.37.5",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1",
     "validator": "^13.12.0"
   }
 }
